fix ProductForm style align.

--- a/src/components/Products/ProductsForm.css
+++ b/src/components/Products/ProductsForm.css
@@ -38,17 +38,22 @@
   flex-wrap: wrap;
   gap: 8px;
   width: 100%;
+  padding-top: 15px;
 }
 
 /* Стили для контейнера с итоговыми данными */
 .twa-summary-container {
   display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
   gap: 20px;
   margin: 5px 0;
   padding: 5px 16px;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 8px;
   border: 2px solid rgba(255, 255, 255, 0.1);
+  text-align: left;
+  width: 100%;
 }
 
 .twa-summary-item {
@@ -92,7 +97,7 @@
   position: sticky;
   z-index: 100;
   width: 100%;
-  height: 142px;
+  height: 132px;
 
   /* Внешний вид */
   background-color: var(--tg-theme-bg-color, #17212b);
@@ -112,6 +117,10 @@
   flex: 1;
   overflow: auto;
   padding-bottom: 70px; /* Отступ для футера */
+}
+
+.twa-content {
+  padding-top: 10px;
 }
 
 .twa-select {
@@ -196,9 +205,9 @@
 .twa-controls-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   gap: 4px;
-  margin-left: 16px;
+  margin-left: 0;
 }
 
 body,
